[gd_scene load_steps=4 format=3 uid="uid://mpfu86h4h7vr"]

[ext_resource type="Script" uid="uid://ccfaohpoecqx6" path="res://scripts/ui/cssmenu/css_player_view.gd" id="1_es03b"]
[ext_resource type="Theme" uid="uid://c2tuuhaxkpt4e" path="res://assets/styles/p0_theme.tres" id="2_4gt7n"]
[ext_resource type="Texture2D" uid="uid://d3cn5or0vkn23" path="res://assets/css/chonkgoon.png" id="2_es03b"]

[node name="CSSPlayerView" type="Control"]
layout_mode = 3
anchor_right = 0.15
anchor_bottom = 0.267
offset_right = -144.0
offset_bottom = -144.18
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_es03b")

[node name="PlayerPanel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
offset_right = 144.0
offset_bottom = 144.0
theme = ExtResource("2_4gt7n")

[node name="Image" type="TextureRect" parent="PlayerPanel"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 136.0
texture = ExtResource("2_es03b")
expand_mode = 2

[node name="Text" type="Label" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -37.0
offset_right = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "PLAYER_NUM"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1
uppercase = true

[node name="ClickPrompt" type="Label" parent="PlayerPanel"]
modulate = Color(0.513726, 0.52549, 0.537255, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -58.5
offset_right = 48.0
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "CLICK TO
ADD
CPU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="PlayerPanel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_right = 139.968
offset_bottom = 139.968

[connection signal="pressed" from="PlayerPanel/Button" to="." method="_on_button_pressed"]
